[project]
name = "django-modeler"
version = "0.11"
authors = [
    { name="Mike Johnson", email="mike@publicstatic.net" },
]
description = "Generate django ORM code from object instances (great for testing)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: zlib/libpng License",
    "Operating System :: OS Independent",
]
license = {text = "zlib/libpng License"}

[project.scripts]
django-modeler = "django_modeler.cli:main"

[project.urls]
"Homepage" = "https://github.com/mrj0/django-modeler"
"Bug Tracker" = "https://github.com/mrj0/django-modeler/issues"

[build-system]
requires = ["Django", "setuptools"]
build-backend = "setuptools.build_meta"
